[package]
name = "rustwled"
version = "0.2.29"
edition = "2021"

[dependencies]
ddp-rs = { git = "https://github.com/coral/ddp-rs" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colorgrad = "0.6"
crossterm = "0.27"
ratatui = "0.26"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
midir = "0.9"
rand = "0.8"
cqt-rs = "0.1"
cpal = "0.15"
dasp = { version = "0.11", features = ["signal", "interpolate"] }
rustfft = "6"
async-stream = "0.3"
futures = "0.3"
base64 = "0.21"
rcgen = "0.12"
rustls = "0.21"
tokio-rustls = "0.24"
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls-pemfile = "1.0"
time = { version = "0.3", features = ["macros"] }
image = "0.24"
ctrlc = "3.4"
